--- a/index.html
+++ b/index.html
@@ -4,17 +4,18 @@
     <meta charset='UTF-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <meta name='viewport' content='width=device-width, initial-scale=1.0'>
-    <title>Visualisation Project #3</title>
+    <title>Visualization Project #3</title>
 
     <link rel='stylesheet' href='style/style.css'>
 
     <script src='https://code.jquery.com/jquery-3.6.0.min.js' integrity='sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=' crossorigin='anonymous' defer></script>
     <script src='https://cdnjs.cloudflare.com/ajax/libs/d3/6.7.0/d3.min.js' crossorigin='anonymous' defer></script>
+    
     <script src='js/loadData.js' defer></script>
 </head>
 <body>
     <h1>Trump Tweet Data</h1>
 
-    <svg id='diagram'></svg>
+    <div id='graph'></div>
 </body>
 </html>
